Finished inverse proxy.

--- a/Body/index.tex
+++ b/Body/index.tex
@@ -6,12 +6,20 @@
 \label{sec:intro}
 \input{Body/P1/introduction.tex}
 
+\newpage 
+
 \section{Estilos y Patrones Arquitectónicos}
 \label{sec:epa}
 \input{Body/P2/epa.tex}
 
+\newpage 
+
 \section{Vistas Arquitectónicas}\label{sec:va}
 \input{Body/P3/va.tex}
 
-\section{Desiciones Arquitecturales a favor de la Seguridad}\label{sec:va}
+\newpage 
+
+\section{Tácticas Arquitecturales a favor de la Seguridad}\label{sec:va}
 \input{Body/P4/se.tex}
+
+\newpage 
