--- a/Body/P4/se.tex
+++ b/Body/P4/se.tex
@@ -1,7 +1,31 @@
-El diseño de la Kwii Platform vela por seguridad de los usuarios, es decir, las decisiones arquitecturales de la plataforma tuvieron en cuenta aspectos del menejo de la información de los usuarios con el fin de proveer al acceso a esta de manera fácil y eficaz, pero solo a los usuarios autorizados a obtenerla y además, las decisiones facilitan negar el acceso a esta información de manera rotunda a quien no esté autorizado. Es por ello que se plantea esta sección, donde se discutirán diferentes decisiones que fueron tomadas para hacer a la Kwii Platform un sistema seguro.
-
-\subsection{Uso de un Proxy Inverso}
+El diseño de la Kwii Platform vela por seguridad de la información de sus usuarios, es decir, las decisiones arquitecturales de la plataforma tuvieron en cuenta aspectos del menejo de la información de los usuarios con el fin de proveer al acceso a esta de manera fácil y eficaz, pero solo a los usuarios autorizados a obtenerla y además, las decisiones facilitan negar el acceso a esta información de manera rotunda a quien no esté autorizado. Es por ello que se plantea esta sección, donde se discutirán diferentes decisiones que fueron tomadas para hacer a la Kwii Platform un sistema seguro.
+\subsection{Uso de un Servidor de Proxy Inverso}
+En la arquitectura de la Kwii Platform, se plantean diferentes componentes que son encargados de numerosas responsabilidades dentro de la plataforma. Dichos componentes satisfacen las responsabilidades a las que son encargadas de maneras muy diversad pero, en general, para cumplir dichas responsabilidades los componentes exponen servicios que son consumidos por un único componente central que hace las de mediador en la arquitectura. Para evitar el acceso no autorizado con posibles acciones malintencionadas y garantizar que los servicios que prestan estos componentes sean únicamente consumidos por el componente central (tal y como lo plantea la vista de capas), se propone el uso de un Servidor de Proxy Inverso.
+\\\\
+\subsubsection{Justificación del uso de un Servidor de Proxy Inverso}
+El Servidor de Proxy Inverso es el encargado de exponer los servicios compuestos del componente central, de exponer el componente Front End Web y de evitar el contacto de los demás componentes con el exterior exterior. La comunicación del mundo exterior con la Kwii Platform es representada en la siguiente figura:
+\begin{center}
+    \includegraphics[width=8cm]{Figures/P4/InverseProxyDiagram1.png}
+\end{center}
+Como se mencionó anteriormente, cualquier intento de comunicación de otro elemento de la plataforma con el exterior será descartado.
+\begin{center}
+    \includegraphics[width=5cm]{Figures/P4/InverseProxyDiagram2.png}
+\end{center}
+\subsubsection{Características de Seguridad Protegidas}
+Las características de seguridad protegidos en la Kwii Platform a la hora de implementar un servidor de proxy inverson son las siguientes:
+\begin{itemize}
+    \item Confidencialidad\\\
+    El servidor de proxy inverso potencia la confidencialidad de la información al disminuir los puntos de acceso a esta. Ahora, viéndonos limitados a acceder a la información de los demás componentes de la plataforma únicamente por medio del componente central, la arquitectura puede ser reforzada en estos aspectos únicamente tratando los flujos de información que pasan por dicho componente.
+    \item Integridad\\\
+    Así mismo como el servidor de proxy inverso asegura la confidencialidad, asegura también la integridad. Restringimos la cantidad de puntos de manipulación de la información.
+    \item Disponibilidad
+    Como trabajo futuro, el servidor de proxy inverso implementa dfunciones de balanceo de carga que garantizan la disponibilidad. (Próximamente)
+\end{itemize}
 
 \subsection{Manejo de Sesión de Usuarios}
+
+Para el manejo de sesión de usuarios, la arquitectura de la Kwii Platform propone un esquema basado en tokens. En él, cualquier comunicación, solicitud de información, y en general, cualquier operación en la plataforma tiene que ser autorizada, por medio de la validación de tokens de usuario.
+
+\subsubsection{Justificación del uso de autenticación basada en tokens}
 
 \subsection{Uso de Directorio Activo}
