--- a/Body/P4/se.tex
+++ b/Body/P4/se.tex
@@ -46,5 +46,9 @@ Las características de seguridad protegidos en la Kwii Platform a la hora de im
     El uso de tokens garantiza la confidencialidad de información creando un mecanismo de acceso en el que solo pueden acceder a la información aquellos usuarios a los que se les conceden permisos autenticándose y recibiendo un token. De la misma manera, únicamente los usuarios a los que se les asigna un token al ser autenticados, son capaces de realizar cambios en la información.
 \end{itemize}
 
-\subsection{Uso de Directorio Activo}
+\subsection{Uso del Protocolo Ligero de Acceso a Directorios (LDAP)}
+
+Para garantizar la fácil autenticación en la Kwii Platform, se propone el uso de un LDAP, con él se garantiza la escalabilidad de la aplicación ya que, varios sistemas que necesiten autenticar un usuario, podrán hacer uso de este componente.
+
+
 
