Fixing kwii-interface

--- a/Body/P3/va.tex
+++ b/Body/P3/va.tex
@@ -32,7 +32,7 @@ La vista de descomposición encierra y describe toda nuestra aplicación en los 
     El módulo Exposer es el módulo referente a la exposición de los servicios de la aplicación. Este módulo vela por la interacción de la aplicación con el exterior. Este módulo contiene los siguientes submódulos:
     \begin{itemize}
         \item kwii-interface\\\
-        Este submódulo es el encargado de ofrecer y consumir servicios de nuestra plataforma a diferentes plataformas. Este submódulo contiene funcionalidades de exposición de nuestros servicios a otras plataformas.
+        Este submodulo es el encargado de exponer funcionalidades de nuestra plataforma hacia otros sistemas de software,  a su vez se encarga de consumir servicios expuestos por otros sistemas.
         \item kwii-proxy\\\
         Este submódulo ofrece nuestros servicios a internet para que sean consumidos por usuarios a mayor escala.
     \end{itemize}
