--- a/Body/index.tex
+++ b/Body/index.tex
@@ -19,7 +19,7 @@
 
 \newpage 
 
-\section{Tácticas Arquitecturales a favor de la Seguridad}\label{sec:va}
+\section{Perspectiva de Seguridad en la Arquitectura}\label{sec:va}
 \input{Body/P4/se.tex}
 
 \newpage 
