Adding no funcional requisites

--- a/Body/P1/introduction.tex
+++ b/Body/P1/introduction.tex
@@ -276,4 +276,6 @@ Para garantizar la calidad de la Kwii Platform, son listadas los siguientes requ
         Framework usado: Rush \\
         Base de Datos: Redis
     \end{itemize}
+    \item El sistema debe garantizar la seguridad de sus usuarios.
+    \item El sistema debe ser fácilmente conectable con otros sistemas.
 \end{itemize}
