--- a/Body/P3/va.tex
+++ b/Body/P3/va.tex
@@ -80,6 +80,7 @@ Para las notificaciones, es de interés guardar información sobre los dispositi
 \includegraphics[width=8cm]{Figures/P3/DataModelNotifications.png}        
 \end{center}
 \subsection{Vista de Componentes y Conectores}
+\label{sub:cyc}
 Para explicar el diagrama de componentes se listarán los componentes usados, junto la explicación de su uso, además de la lista de sus relaciones.
 \begin{itemize}
     \item Componente de kwii\textunderscore api\\
