--- a/Body/index.tex
+++ b/Body/index.tex
@@ -14,12 +14,24 @@
 
 \newpage 
 
-\section{Vistas Arquitectónicas}\label{sec:va}
+\section{Vistas Arquitectónicas}
+\label{sec:va}
 \input{Body/P3/va.tex}
 
 \newpage 
 
-\section{Perspectiva de Seguridad en la Arquitectura}\label{sec:va}
+\section{Perspectiva de Seguridad en la Arquitectura}
+\label{sec:psa}
 \input{Body/P4/se.tex}
 
 \newpage 
+
+\section{Perspectiva de Interoperabilidad de la Arquitectura}
+\label{sec:pia}
+\input{Body/P4/inter.tex}
+
+\newpage
+
+\section{Perspectiva de Rendimiento y Alta Disponibilidad}
+\label{sec:prad}
+\input{Body/P5/ren.tex}
